login feature finished

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # PyCharm
 .idea/
 
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -51,3 +52,5 @@ coverage.xml
 
 # Sphinx documentation
 docs/_build/
+
+*.sqlite3
